fix: fixed with on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -1349,6 +1349,7 @@ footer a:hover {
   .content.wide {
     margin: 0px -20px;
     padding-left: 20px;
+    width: 100vw;
   }
 
   .main-img {
